--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ a {
 .header-navigation {
     display: flex;
     align-items: center;
-}
+}   
 
 .header-logo {
     color: #4D5AE5;
@@ -71,21 +71,38 @@ a {
     color: #2e2f42;
 }
 
+.burger-button {
+    width: 30px;
+    height: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.bar {
+    width: 30px;
+    height: 3px;
+    background-color: #333;
+    transition: 0.4s;
+}
+
 .header-menu {
-    font-size: 16px;
+    /* font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
     display: flex;
     gap: 40px;
     margin: 0;
-    padding: 0;
+    padding: 0; */
+    display: none;
 }
 
 .header-menu-item {
 }
 
-.header-menu-link {
+/* .header-menu-link {
     display: block;
     color: #2E2F42;
     padding: 24px 0;
@@ -96,13 +113,13 @@ a {
 .header-menu-link:hover,
 .header-menu-link:focus {
     color: #404BBF;
-}
+} */
 
-.current {
+/* .current {
     color: #404BBF;
-}
+} */
 
-.current::after {
+/* .current::after {
     content: "";
     position: absolute;
     left: 0;
@@ -111,25 +128,22 @@ a {
     background-color: #404bbf;
     border-radius: 2px;
     width: 100%;
-}
+} */
 
 .contact-info {
-    font-style: normal;
-    margin-left: auto;
 }
 
 .contact-list {
-    display: flex;
-    gap: 40px;
-} 
+    display: none;
+}
 
-.header-address-link {
+/* .header-address-link {
     color: #434455;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 .header-address-link:hover,
 .header-address-link:focus,
@@ -142,12 +156,18 @@ a {
     padding: 72px 0;
     text-align: center;
     background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
-    url(../images/main-background.jpg);
+    url(../images/main-mob.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     max-width: 320px;
     margin: 0 auto;
+}
+
+@media (min-resolution: 192dpi) {
+    .main {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/main-mob@2x.jpg);
+    }
 }
 
 .main-container {
@@ -582,15 +602,15 @@ a {
 }
 
 .modal {
-    width: 408px;
-    min-height: 584px;
+    width: 288px;
+    min-height: 623px;
     background-color: #FCFCFC;
     border-radius: 4px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 72px 24px 24px 24px;
+    padding: 72px 16px 24px 16px;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -728,12 +748,13 @@ a {
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
+    display: flex;
+    align-items: center;
 }
 
 .check-text a {
     color: #4D5AE5;
     text-decoration-line: underline;
-    margin-left: 4px;
 }
 
 .checkbox-span {
@@ -792,10 +813,81 @@ a {
     .container {
         width: 768px;
     }
+
+    .header-menu {
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        display: flex;
+        gap: 40px;
+        margin: 0;
+        padding: 0;
+    }
+
+    .header-menu-link {
+        display: block;
+        color: #2E2F42;
+        padding: 24px 0;
+        position: relative;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .header-menu-link:hover,
+    .header-menu-link:focus {
+        color: #404BBF;
+    }
+    
+    .current {
+        color: #404BBF;
+    }
+    
+    .current::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        height: 4px;
+        background-color: #404bbf;
+        border-radius: 2px;
+        width: 100%;
+    }
+    
+    .contact-info {
+        font-style: normal;
+        margin-left: auto;
+    }
+    
+    .contact-list {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+    
+    .header-address-link {
+        color: #434455;
+        font-size: 12px;
+        line-height: 1.2;
+        letter-spacing: 0.04em;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .header-address-link:hover,
+    .header-address-link:focus,
+    .header-address-link:active {
+        color: #404BBF;
+    }
     
     .main {
         padding: 112px 0;
         max-width: 768px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/main-tab.jpg);
+    }
+
+    @media (min-resolution: 192dpi) {
+        .main {
+            background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/main-tab@2x.jpg);
+        }
     }
 
     .main-container {
@@ -856,9 +948,50 @@ a {
     .footer-input {
         width: 264px;
     }
+
+    .modal {
+        width: 408px;
+        min-height: 584px;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+
+    .check-text a {
+        margin-left: 4px;
+    }
+
+    .privacy-text {
+        display: flex;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1157px) {
+    /* .header-menu {
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        display: flex;
+        gap: 40px;
+        margin: 0;
+        padding: 0;
+    } */
+
+     /* .contact-info {
+        font-style: normal;
+        margin-left: auto;
+    } */
+
+    /* .contact-info {
+        font-style: normal;
+        margin-left: auto;
+    }
+
+    .contact-list {
+        display: flex;
+        gap: 40px;
+    } */
+
     .features-list {
         flex-direction: row;
         flex-wrap: wrap;
@@ -887,9 +1020,25 @@ a {
         width: 1158px;
     }
 
+    .contact-info {
+        margin-left: auto;
+    }
+
+    .contact-list {
+        flex-direction: row;
+        gap: 40px;
+    }
+
     .main {
         padding: 188px 0;
         max-width: 1440px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/main-background.jpg);
+    }
+
+    @media (min-resolution: 192dpi) {
+        .main {
+            background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/main@2x.jpg);
+        }
     }
 
     .main-container {
